# polygonIntersection

./: CMakeLists.txt  README.md  bathroom.txt  bedroom.txt  dinningroom.txt  flatSurfaces.txt  generatePositionsObjects.xlsx  internalExploration.cpp  kitchen.txt  lab_2015.map  livingroom.txt  main.cpp  polygonIntersection.kdev4  studio.txt  visibilityCone.txt
.kdev4/: polygonIntersection.kdev4
